fix overflow in note page

--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden; 
 }
 
 body {
@@ -16,6 +17,7 @@ body {
 footer {
   flex-shrink: 0;
 }
+
 
 .capitalize-once::first-letter {
   text-transform: uppercase;
